src/gems/expression/parsing/antlr/ExprParser.py
# Generated from Expr.g4 by ANTLR 4.13.2
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "'-'", "'('", "')'", "'/'", "'*'", 
                     "'+'", "'sum'", "'sum_connections'", "'..'", "','", 
                     "'['", "']'", "<INVALID>", "'t'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NUMBER", "TIME", "IDENTIFIER", 
                      "COMPARISON", "WS" ]

    RULE_portFieldExpr = 0
    RULE_fullexpr = 1
    RULE_expr = 2
    RULE_argList = 3
    RULE_atom = 4
    RULE_shift = 5
    RULE_shift_expr = 6
    RULE_right_expr = 7

    ruleNames =  [ "portFieldExpr", "fullexpr", "expr", "argList", "atom", 
                   "shift", "shift_expr", "right_expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    NUMBER=14
    TIME=15
    IDENTIFIER=16
    COMPARISON=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PortFieldExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.IDENTIFIER)
            else:
                return self.getToken(ExprParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return ExprParser.RULE_portFieldExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPortFieldExpr" ):
                return visitor.visitPortFieldExpr(self)
            else:
                return visitor.visitChildren(self)




    def portFieldExpr(self):

        localctx = ExprParser.PortFieldExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_portFieldExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.match(ExprParser.IDENTIFIER)
            self.state = 17
            self.match(ExprParser.T__0)
            self.state = 18
            self.match(ExprParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FullexprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_fullexpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFullexpr" ):
                return visitor.visitFullexpr(self)
            else:
                return visitor.visitChildren(self)




    def fullexpr(self):

        localctx = ExprParser.FullexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_fullexpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.expr(0)
            self.state = 21
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class PortFieldSumContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def portFieldExpr(self):
            return self.getTypedRuleContext(ExprParser.PortFieldExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPortFieldSum" ):
                return visitor.visitPortFieldSum(self)
            else:
                return visitor.visitChildren(self)


    class NegationContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegation" ):
                return visitor.visitNegation(self)
            else:
                return visitor.visitChildren(self)


    class UnsignedAtomContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(ExprParser.AtomContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnsignedAtom" ):
                return visitor.visitUnsignedAtom(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)


    class ComparisonContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)

        def COMPARISON(self):
            return self.getToken(ExprParser.COMPARISON, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparison" ):
                return visitor.visitComparison(self)
            else:
                return visitor.visitChildren(self)


    class AllTimeSumContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAllTimeSum" ):
                return visitor.visitAllTimeSum(self)
            else:
                return visitor.visitChildren(self)


    class TimeIndexExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimeIndexExpr" ):
                return visitor.visitTimeIndexExpr(self)
            else:
                return visitor.visitChildren(self)


    class AddsubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddsub" ):
                return visitor.visitAddsub(self)
            else:
                return visitor.visitChildren(self)


    class TimeShiftExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)

        def shift(self):
            return self.getTypedRuleContext(ExprParser.ShiftContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimeShiftExpr" ):
                return visitor.visitTimeShiftExpr(self)
            else:
                return visitor.visitChildren(self)


    class PortFieldContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def portFieldExpr(self):
            return self.getTypedRuleContext(ExprParser.PortFieldExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPortField" ):
                return visitor.visitPortField(self)
            else:
                return visitor.visitChildren(self)


    class MuldivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMuldiv" ):
                return visitor.visitMuldiv(self)
            else:
                return visitor.visitChildren(self)


    class TimeSumContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.from_ = None # ShiftContext
            self.to = None # ShiftContext
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)

        def shift(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ShiftContext)
            else:
                return self.getTypedRuleContext(ExprParser.ShiftContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimeSum" ):
                return visitor.visitTimeSum(self)
            else:
                return visitor.visitChildren(self)


    class TimeIndexContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)
        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimeIndex" ):
                return visitor.visitTimeIndex(self)
            else:
                return visitor.visitChildren(self)


    class TimeShiftContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)
        def shift(self):
            return self.getTypedRuleContext(ExprParser.ShiftContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimeShift" ):
                return visitor.visitTimeShift(self)
            else:
                return visitor.visitChildren(self)


    class FunctionContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)
        def argList(self):
            return self.getTypedRuleContext(ExprParser.ArgListContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = ExprParser.UnsignedAtomContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 24
                self.atom()
                pass

            elif la_ == 2:
                localctx = ExprParser.PortFieldContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 25
                self.portFieldExpr()
                pass

            elif la_ == 3:
                localctx = ExprParser.NegationContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 26
                self.match(ExprParser.T__1)
                self.state = 27
                self.expr(13)
                pass

            elif la_ == 4:
                localctx = ExprParser.ExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 28
                self.match(ExprParser.T__2)
                self.state = 29
                self.expr(0)
                self.state = 30
                self.match(ExprParser.T__3)
                pass

            elif la_ == 5:
                localctx = ExprParser.AllTimeSumContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 32
                self.match(ExprParser.T__7)
                self.state = 33
                self.match(ExprParser.T__2)
                self.state = 34
                self.expr(0)
                self.state = 35
                self.match(ExprParser.T__3)
                pass

            elif la_ == 6:
                localctx = ExprParser.PortFieldSumContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 37
                self.match(ExprParser.T__8)
                self.state = 38
                self.match(ExprParser.T__2)
                self.state = 39
                self.portFieldExpr()
                self.state = 40
                self.match(ExprParser.T__3)
                pass

            elif la_ == 7:
                localctx = ExprParser.TimeSumContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 42
                self.match(ExprParser.T__7)
                self.state = 43
                self.match(ExprParser.T__2)
                self.state = 44
                localctx.from_ = self.shift()
                self.state = 45
                self.match(ExprParser.T__9)
                self.state = 46
                localctx.to = self.shift()
                self.state = 47
                self.match(ExprParser.T__10)
                self.state = 48
                self.expr(0)
                self.state = 49
                self.match(ExprParser.T__3)
                pass

            elif la_ == 8:
                localctx = ExprParser.FunctionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 51
                self.match(ExprParser.IDENTIFIER)
                self.state = 52
                self.match(ExprParser.T__2)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 82700) != 0):
                    self.state = 53
                    self.argList()


                self.state = 56
                self.match(ExprParser.T__3)
                pass

            elif la_ == 9:
                localctx = ExprParser.TimeShiftContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 57
                self.match(ExprParser.IDENTIFIER)
                self.state = 58
                self.match(ExprParser.T__11)
                self.state = 59
                self.shift()
                self.state = 60
                self.match(ExprParser.T__12)
                pass

            elif la_ == 10:
                localctx = ExprParser.TimeIndexContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 62
                self.match(ExprParser.IDENTIFIER)
                self.state = 63
                self.match(ExprParser.T__11)
                self.state = 64
                self.expr(0)
                self.state = 65
                self.match(ExprParser.T__12)
                pass

            elif la_ == 11:
                localctx = ExprParser.TimeShiftExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 67
                self.match(ExprParser.T__2)
                self.state = 68
                self.expr(0)
                self.state = 69
                self.match(ExprParser.T__3)
                self.state = 70
                self.match(ExprParser.T__11)
                self.state = 71
                self.shift()
                self.state = 72
                self.match(ExprParser.T__12)
                pass

            elif la_ == 12:
                localctx = ExprParser.TimeIndexExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 74
                self.match(ExprParser.T__2)
                self.state = 75
                self.expr(0)
                self.state = 76
                self.match(ExprParser.T__3)
                self.state = 77
                self.match(ExprParser.T__11)
                self.state = 78
                self.expr(0)
                self.state = 79
                self.match(ExprParser.T__12)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 94
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 92
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        localctx = ExprParser.MuldivContext(self, ExprParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 83
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 84
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==5 or _la==6):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 85
                        self.expr(12)
                        pass

                    elif la_ == 2:
                        localctx = ExprParser.AddsubContext(self, ExprParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 86
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 87
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==2 or _la==7):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 88
                        self.expr(11)
                        pass

                    elif la_ == 3:
                        localctx = ExprParser.ComparisonContext(self, ExprParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 89
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 90
                        self.match(ExprParser.COMPARISON)
                        self.state = 91
                        self.expr(10)
                        pass

             
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ArgListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_argList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgList" ):
                return visitor.visitArgList(self)
            else:
                return visitor.visitChildren(self)




    def argList(self):

        localctx = ExprParser.ArgListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_argList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.expr(0)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11:
                self.state = 98
                self.match(ExprParser.T__10)
                self.state = 99
                self.expr(0)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_atom

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NumberContext(AtomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(ExprParser.NUMBER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)


    class IdentifierContext(AtomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)



    def atom(self):

        localctx = ExprParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_atom)
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                localctx = ExprParser.NumberContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(ExprParser.NUMBER)
                pass
            elif token in [16]:
                localctx = ExprParser.IdentifierContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(ExprParser.IDENTIFIER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShiftContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIME(self):
            return self.getToken(ExprParser.TIME, 0)

        def shift_expr(self):
            return self.getTypedRuleContext(ExprParser.Shift_exprContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_shift

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShift" ):
                return visitor.visitShift(self)
            else:
                return visitor.visitChildren(self)




    def shift(self):

        localctx = ExprParser.ShiftContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_shift)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(ExprParser.TIME)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2 or _la==7:
                self.state = 110
                self.shift_expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Shift_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_shift_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class SignedAtomContext(Shift_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.Shift_exprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(ExprParser.AtomContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignedAtom" ):
                return visitor.visitSignedAtom(self)
            else:
                return visitor.visitChildren(self)


    class SignedExpressionContext(Shift_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.Shift_exprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignedExpression" ):
                return visitor.visitSignedExpression(self)
            else:
                return visitor.visitChildren(self)


    class ShiftMuldivContext(Shift_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.Shift_exprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def shift_expr(self):
            return self.getTypedRuleContext(ExprParser.Shift_exprContext,0)

        def right_expr(self):
            return self.getTypedRuleContext(ExprParser.Right_exprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShiftMuldiv" ):
                return visitor.visitShiftMuldiv(self)
            else:
                return visitor.visitChildren(self)


    class ShiftAddsubContext(Shift_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.Shift_exprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def shift_expr(self):
            return self.getTypedRuleContext(ExprParser.Shift_exprContext,0)

        def right_expr(self):
            return self.getTypedRuleContext(ExprParser.Right_exprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShiftAddsub" ):
                return visitor.visitShiftAddsub(self)
            else:
                return visitor.visitChildren(self)



    def shift_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.Shift_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_shift_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = ExprParser.SignedAtomContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 114
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==2 or _la==7):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 115
                self.atom()
                pass

            elif la_ == 2:
                localctx = ExprParser.SignedExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 116
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==2 or _la==7):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 117
                self.match(ExprParser.T__2)
                self.state = 118
                self.expr(0)
                self.state = 119
                self.match(ExprParser.T__3)
                pass

